--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,8 @@ readme = "README.adoc"
 [tool.poetry.dependencies]
 python = ">=3.9"
 loguru = ">=0.6"
-
+click = ">=8.1"
+more-itertools = "^10.5.0"
 
 [tool.poetry.group.dev.dependencies]
 pytest = ">=8.3"
