--- a/dict.yaml
+++ b/dict.yaml
@@ -5,3 +5,6 @@ validate-yaml:
 
 list-files:
   root_dir: "Путь до директории.\nПо умолчанию: текущая директория"
+
+terms:
+  args: "Перечень запрашиваемых аббревиатур"
