--- a/sources/dict.yaml
+++ b/sources/dict.yaml
@@ -4,10 +4,10 @@ validate-yaml:
   yaml_file: "Путь до файла PDF_*.yml"
 
 list-files:
-  root_dir: "Путь до директории.\nПо умолчанию: текущая директория"
+  root_dir: "Путь до директории. По умолчанию: текущая директория"
 
 terms:
-  args: "Строка. Перечень запрашиваемых аббревиатур"
+  args: "Перечень запрашиваемых аббревиатур"
 
 link-repair:
-  pathdir: "Строка. Директория, в которой будут обрабатываться все *.md файлы."
+  pathdir: "Директория, в которой обрабатываются все *.md- и *.adoc-файлы."
