--- a/sources/dict.yaml
+++ b/sources/dict.yaml
@@ -10,4 +10,4 @@ terms:
   args: "Перечень запрашиваемых аббревиатур"
 
 link-repair:
-  pathdir: "Директория, в которой обрабатываются все *.md- и *.adoc-файлы."
+  pathdir: "Директория, в которой обрабатываются все *.md- и *.adoc-файлы"
