--- a/sources/dict.yaml
+++ b/sources/dict.yaml
@@ -6,7 +6,7 @@ list-files:
   root_dir: "Путь до директории"
 
 terms:
-  args: "Перечень запрашиваемых аббревиатур"
+  terms: "Перечень запрашиваемых аббревиатур"
 
 link-repair:
   pathdir: "Путь до директории для обработки *.md- и *.adoc-файлов"
