fixed some bugs

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ python = ">=3.9"
 loguru = ">=0.6"
 click = ">=8.1"
 more-itertools = ">=10.5"
+pyyaml = ">6.0"
 
 [tool.poetry.group.dev.dependencies]
 pytest = ">=8.3"
