--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "utilities"
-version = "1.1.1"
+version = "1.1.2"
 description = "Command line interface commands for technical writers"
 authors = ["Andrew Tarasov <tarasov-a@protei.ru>"]
 license = "MIT"
@@ -18,7 +18,7 @@ more-itertools = ">=10.5"
 pyyaml = ">=6.0"
 pillow = ">=11.1"
 python-slugify = ">=8.0"
-certifi = ">=2025.1"
+certifi = { version = ">=2025.1", markers = "sys_platform != 'win32'" }
 pip-system-certs = { version = ">=4.0", markers = "sys_platform == 'win32'" }
 
 [tool.poetry.group.dev.dependencies]
