--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,7 +21,7 @@ certifi = { version = ">=2025.1", markers = "sys_platform != 'win32'" }
 pip-system-certs = { version = ">=4.0", markers = "sys_platform == 'win32'" }
 typer = ">=0.15"
 shellingham = ">=1.5"
-rich = "^13.9.4"
+rich = ">=13.9"
 
 [tool.poetry.group.dev.dependencies]
 pytest = ">=8.3"
