--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,34 +1,28 @@
-[tool.poetry]
+[project]
 name = "utilities"
-version = "1.1.3"
+version = "2.0.0"
 description = "Command line interface commands for technical writers"
 authors = ["Andrew Tarasov <tarasov-a@protei.ru>"]
 license = "MIT"
 readme = "README.adoc"
 repository = "https://gitlab.com/tech_writers_protei/utilities/"
-packages = [
-  { include = "utilities" }
+requires-python = ">=3.9"
+dependencies = [
+  "certifi>=2025.1",
+  "click>=8.1",
+  "loguru>=0.7",
+  "more-itertools>=10.6",
+  "pillow>=11.1",
+  "pip-system-certs>=4.0",
+  "python-slugify>=8.0",
+  "pyyaml>=6.0",
+  "shellingham>=1.5",
 ]
 
-[tool.poetry.dependencies]
-python = ">=3.9"
-loguru = ">=0.7"
-click = ">=8.1"
-more-itertools = ">=10.5"
-pyyaml = ">=6.0"
-pillow = ">=11.1"
-python-slugify = ">=8.0"
-certifi = { version = ">=2025.1", markers = "sys_platform != 'win32'" }
-pip-system-certs = { version = ">=4.0", markers = "sys_platform == 'win32'" }
+[dependency-groups]
+dev = [
+  "flake8>=7.1",
+  "pytest>=8.3",
+  "vulture>=2.14",
+]
 
-[tool.poetry.group.dev.dependencies]
-pytest = ">=8.3"
-flake8 = ">=7.1"
-vulture = ">=2.13"
-
-[build-system]
-requires = ["poetry-core"]
-build-backend = "poetry.core.masonry.api"
-
-[tool.poetry.scripts]
-my-script = "__main__.py"
