--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,7 @@ utilities = "__main__.py"
 
 [dependency-groups]
 dev = [
+  "click-completion>=0.5.2",
   "flake8>=7.1",
   "mypy>=1.15",
   "pyinstaller>=6.12",
