--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,10 +2,11 @@
 name = "utilities"
 version = "2.0.0"
 description = "Command line interface commands for technical writers"
-authors = ["Andrew Tarasov <tarasov-a@protei.ru>"]
-license = "MIT"
+authors = [
+  { name = "Andrew Tarasov", email = "tarasov-a@protei.ru" }
+]
+license = { text = "MIT License" }
 readme = "README.adoc"
-repository = "https://gitlab.com/tech_writers_protei/utilities/"
 requires-python = ">=3.9"
 dependencies = [
   "certifi>=2025.1",
@@ -18,6 +19,7 @@ dependencies = [
   "pyyaml>=6.0",
   "shellingham>=1.5",
 ]
+
 
 [project.scripts]
 utilities = "__main__.py"
@@ -34,7 +36,7 @@ dev = [
 
 [tool.uv]
 managed = true
-package = false
+package = true
 compile-bytecode = true
 python-downloads = "never"
 python-preference = "managed"
