--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,10 +11,12 @@ requires-python = ">=3.9"
 dependencies = [
   "certifi>=2025.1",
   "click>=8.1",
+  "httpx>=0.28",
   "loguru>=0.7",
   "more-itertools>=10.6",
   "pillow>=11.1",
   "pip-system-certs>=4.0",
+  "python-frontmatter>=1.1",
   "python-slugify>=8.0",
   "pyyaml>=6.0",
   "shellingham>=1.5",
