--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ requires-python = ">=3.9"
 dependencies = [
   "certifi>=2025.1",
   "click>=8.1",
+  "httpx>=0.28",
   "loguru>=0.7",
   "more-itertools>=10.6",
   "pillow>=11.1",
