--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ dependencies = [
   "more-itertools>=10.6",
   "pillow>=11.1",
   "pip-system-certs>=4.0",
+  "psutil>=7.0",
   "python-frontmatter>=1.1",
   "python-slugify>=8.0",
   "pyyaml>=6.0",
