--- a/sources/config.yaml
+++ b/sources/config.yaml
@@ -4,9 +4,9 @@ general:
   log_path: "~/Desktop/_logs/cli_debug.log"
   config_path: "sources/dict.yaml"
   temp_dir: "~/_temp/"
-  col_max: 52
-  max_content_width: 96
-  terminal_width: 96
+  col_max: 50
+  max_content_width: 100
+  terminal_width: 100
 
 update:
   auto_update: true
@@ -108,3 +108,6 @@ commands:
     file_beginnings:
       - "protei"
       - "pdf"
+
+  generate-yaml:
+    args: null
