--- a/.editorconfig
+++ b/.editorconfig
@@ -197,6 +197,8 @@ ij_toml_tab_width = 2
 ij_toml_continuation_indent_size = 2
 ij_any_spaces_within_braces = true
 ij_any_spaces_within_brackets = true
+indent_size = 2
+tab_width = 2
 
 [{*.yaml,*.yml}]
 indent_size = 2
