--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ dependencies = [
   "python-frontmatter>=1.1",
   "python-slugify>=8.0",
   "pyyaml>=6.0",
+  "textual>=3.2.0",
 ]
 keywords = [
   "utilities",
