--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,12 +14,13 @@ dependencies = [
   "httpx>=0.28",
   "loguru>=0.7",
   "more-itertools>=10.6",
+  "orjson>=3.10.18",
   "pillow>=11.1",
   "pip-system-certs>=4.0",
   "python-frontmatter>=1.1",
   "python-slugify>=8.0",
-  "pyyaml>=6.0",
   "rich>=14.0.0",
+  "strictyaml>=1.7.3",
   "trogon>=0.6.0",
 ]
 keywords = [
