--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,12 +20,14 @@ jobs:
           uv pip install pyinstaller
       - name: Build with PyInstaller
         run: uv run pyinstaller --noconfirm --distpath github_exe/ utilities.exe.spec
-      - name: Print EXE path
-        run: |
-          echo "Built EXE file:"
-          find github_exe -name "*.exe" -exec realpath {} \;
       - name: Upload EXE
         uses: actions/upload-artifact@v4
         with:
           name: tw_utilities.exe
           path: github_exe/
+      - name: Upload to GitHub Release
+        uses: softprops/action-gh-release@v2
+        with:
+          files: github_exe/*.exe
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
